add navigation for likes.html page

--- a/likes.html
+++ b/likes.html
@@ -22,36 +22,43 @@
         </div>
         <div class="paletteContainer">
             Box 2
-
         </div>
         <div class="paletteContainer">
             Box 3
-
-
         </div>
         <div class="paletteContainer">
             Box 4
-
         </div>
         <div class="paletteContainer">
             Box 5
-
         </div>
         <div class="paletteContainer">
             Box 6
-
         </div>
-        
-        
     </div>
 
-
-
-
+    <nav>
+      <div class="navigation__bar">
+        <ul>
+          <li>
+            <a href="#logout">
+              <img class="icon" src="/images/profile-icon.svg" alt="Profile Icon">
+              <span>Profile</span> 
+            </a>
+          </li>
+          <li>
+            <div class="refresh" data-randombtn class="controls__button">
+              <img class="refresh__icon" src="/images/refresh-icon.svg" alt="Refresh Icon" >
+            </div> 
+          </li>
+          <li>
+            <a href="likes.html">
+              <img class="icon" src="/images/heart-icon.svg" alt="Heart Icon">
+              <span>Likes</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 </body>
-
-
-
-
-
 </html>
