--- a/generator.html
+++ b/generator.html
@@ -47,25 +47,27 @@
 
         <!--BOTTOM NAV BAR-->
         <nav>
-            <div class="navigation__bar">
-                <ul>
-                    <li><a href="#logout">
-                        <img class="icon" src="/images/profile-icon.svg" alt="Profile Icon">
-                        <span>Profile</span>
-                        
-                        </a></li>
-                    <li>
-                        <div class="refresh" data-randombtn class="controls__button">
-                            <img class="refresh__icon" src="/images/refresh-icon.svg" alt="Refresh Icon" >
-                        </div> 
-                    </li>
-                    <li><a href="likes.html">
-                        <img class="icon" src="/images/heart-icon.svg" alt="Heart Icon">
-                        <span>Likes</span>
-
-                    </a></li>
-                </ul>
-            </div>
+          <div class="navigation__bar">
+            <ul>
+              <li>
+                <a href="#logout">
+                  <img class="icon" src="/images/profile-icon.svg" alt="Profile Icon">
+                  <span>Profile</span> 
+                </a>
+              </li>
+              <li>
+                <div class="refresh" data-randombtn class="controls__button">
+                  <img class="refresh__icon" src="/images/refresh-icon.svg" alt="Refresh Icon" >
+                </div> 
+              </li>
+              <li>
+                <a href="likes.html">
+                  <img class="icon" src="/images/heart-icon.svg" alt="Heart Icon">
+                  <span>Likes</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </nav>
     </div> 
 </div>
