refractored the javascript code

--- a/generator.html
+++ b/generator.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
-    <link rel="stylesheet" href="app/css/generator-styling.css">
+    <link rel="stylesheet" href="./app/css/global.css"/>
+    <link rel="stylesheet" href="app/css/generator-styling.css"/>
     <script src="https://cdn.jsdelivr.net/npm/tinycolor2@1.4.1/dist/tinycolor-min.js"></script>
     <script src="api.js"></script>
     <script src="app/js/index.js"></script>
