--- a/likes.html
+++ b/likes.html
@@ -5,38 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
-    <link rel="stylesheet" href="likes-styling.css">
+    <link rel="stylesheet" href="./app/css/global.css"/>
+    <link rel="stylesheet" href="/app/css/likes-styling.css"/>
     <script src="https://cdn.jsdelivr.net/npm/tinycolor2@1.4.1/dist/tinycolor-min.js"></script>
-    <script src="index.js"></script>
-
-
-
+    <script src="/app/js/index.js"></script>
 </head>
 
 <body>
     <!--Container for liked palettes-->
-    <div class="allLikedPalettes" data-allLikedPalettes>
-    <!--Palette content container-->
-        <div class="paletteContainer" data-paletteContainer>
-            Box 1
-        </div>
-        <div class="paletteContainer">
-            Box 2
-        </div>
-        <div class="paletteContainer">
-            Box 3
-        </div>
-        <div class="paletteContainer">
-            Box 4
-        </div>
-        <div class="paletteContainer">
-            Box 5
-        </div>
-        <div class="paletteContainer">
-            Box 6
-        </div>
-    </div>
+    <div class="liked-palettes" data-liked-palettes>
+      <div class="liked-palettes__wrapper">
+        <!-- dummy palettes -->
+        <div class="palette"></div>
+        <div class="palette"></div>
+        <div class="palette"></div>
 
+      </div>
+    </div>
     <nav>
       <div class="navigation__bar">
         <ul>
