--- a/generator.html
+++ b/generator.html
@@ -7,11 +7,10 @@
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     <link rel="stylesheet" href="./app/css/global.css"/>
     <link rel="stylesheet" href="app/css/generator-styling.css"/>
-    <script src="https://cdn.jsdelivr.net/npm/tinycolor2@1.4.1/dist/tinycolor-min.js"></script>
-    <script src="api.js"></script>
-    <script src="app/js/index.js"></script>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/tinycolor2@1.4.1/dist/tinycolor-min.js" defer></script>
+    <script src="./app/js/index.js" defer></script>
+    <script src="./app/js/generator.js" defer></script>
 </head>    
 
 
@@ -41,7 +40,7 @@
             </li> -->
         </ol>
 
-        <div class ="likeButton__container" id="likeButtonContainer">
+        <div class="likeButton__container" id="likeButtonContainer">
             <button class="heart-btn" id="heart"></button>
             <!-- <img class="heart__icon" src="/images/heart-icon.svg" alt="Heart Icon"> -->
         </div>
@@ -57,7 +56,7 @@
                 </a>
               </li>
               <li>
-                <div class="refresh" data-randombtn class="controls__button">
+                <div class="refresh" data-randomBtn class="controls__button">
                   <img class="refresh__icon" src="/images/refresh-icon.svg" alt="Refresh Icon" >
                 </div> 
               </li>
@@ -72,7 +71,5 @@
         </nav>
     </div> 
 </div>
-
 </body>
-
 </html>
