--- a/likes.html
+++ b/likes.html
@@ -7,8 +7,10 @@
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     <link rel="stylesheet" href="./app/css/global.css"/>
     <link rel="stylesheet" href="/app/css/likes-styling.css"/>
-    <script src="https://cdn.jsdelivr.net/npm/tinycolor2@1.4.1/dist/tinycolor-min.js"></script>
-    <script src="/app/js/index.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/tinycolor2@1.4.1/dist/tinycolor-min.js" defer></script>
+    <script src="/app/js/index.js" defer></script>
+    <script src="./app/js/likes.js" defer></script>
 </head>
 
 <body>
@@ -16,9 +18,9 @@
     <div class="liked-palettes" data-liked-palettes>
       <div class="liked-palettes__wrapper">
         <!-- dummy palettes -->
+        <!-- <div class="palette"></div>
         <div class="palette"></div>
-        <div class="palette"></div>
-        <div class="palette"></div>
+        <div class="palette"></div> -->
 
       </div>
     </div>
