mobile responsiveness for likes, modal text edits

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <div class="popup-p">
             All functions are available with an account. <br> 
             You will be able to save your faves!
+            Coming Soon ⏳!
         </div>
         <button class="google-login-btn">Log in with Google</button>
     </dialog>
