layout tweaks and increased mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
             <h3>WELCOME TO</h3>
             <h1>HEX</h1>
             <p>Generate the coolest color palettes on the web!</p>
-            <a href="/generator.html" class="create-btn" id="create-palette-btn">Create palette</a>
+            <div class="button-container">
+                <a href="/generator.html" class="create-btn" id="create-palette-btn">Create palette</a>
 
-            <!-- Trigger/Open The Modal -->
+                <!-- Trigger/Open The Modal -->
+                <button class="button login-btn">Log In</button>
 
-            <button class="button login-btn">Log In</button>
+            </div>
             <h6>BY TERESA AKINBODUN</h6>
         </div>
     </div>
