--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>HEX</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "icon" type = "image/png" href = images/favicon.png>
     <link rel="stylesheet" href="/app/css/styles.css">
     <link rel="stylesheet" href="/app/css/modal.css">
     <script src="api.js"></script>
